--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,63 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ShowApp</title>
+    <title>TwitterDemo</title>
     <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag "https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+  	<% if flash[:notice] %>
+	  	<div class="notification is-primary global-notification">
+	  		<p class="notice"><%= notice %></p>  		
+	  	</div>
+  	<% end %>
+
+  	<% if flash[:alert] %>
+	  	<div class="notification is-danger global-notification">
+	  		<p class="alert"><%= alert %></p>  		
+	  	</div>
+  	<% end %>
+  	<nav class=" navbar is-primary">
+  		<div class="navbar-brand">
+	  		<%= link_to root_path, class: "navbar-item" do %>
+	  			<h1 class="title is-5">New Twitter</h1>
+	  		<% end %>
+	  		<div class="navbar-burger burger" data-taget="navbarExample">
+	  			<span></span>
+	  			<span></span>
+	  			<span></span>
+	  		</div>
+	  	</div>
+
+	  	<div id="navbarExample" class="navbar-menu">
+	  		<div class="navbar-end">
+	  			<div class="field is-grouped">
+	  				<p class="control">
+	  					<% if user_signed_in? %>
+	  						<%= link_to(current_user.name, edit_registration_path(current_user), class: "button is-primary") %>  
+	  					<% end %>
+	  				</p>
+	  				<p class="control">
+	  					<%#= link_to "New Tweet", root_path, class: "button is-info is-inverted" %>
+	  					<% if user_signed_in? %>
+						  
+						  <%= link_to('Logout', destroy_user_session_path, class: "button is-primary",method: :delete) %>        
+						  
+						<% else %>
+						  
+						  <%= link_to('Login', new_user_session_path, class: "button is-primary") %>  
+						  
+						<% end %>
+	  				</p>
+	  			</div>
+	  		</div>
+	  	</div>
+  	</nav>
+
     <%= yield %>
   </body>
 </html>
